# max32630

./: .gitignore  Cargo.toml  README.md  update.sh
max32630_svd/: Cargo.toml
max32630_svd/src/: lib.rs
max32630_svd/src/adc/: mod.rs
max32630_svd/src/adc/afe_ctrl/: mod.rs
max32630_svd/src/adc/ctrl/: mod.rs
max32630_svd/src/adc/data/: mod.rs
max32630_svd/src/adc/intr/: mod.rs
max32630_svd/src/adc/limit0/: mod.rs
max32630_svd/src/adc/limit1/: mod.rs
max32630_svd/src/adc/limit2/: mod.rs
max32630_svd/src/adc/limit3/: mod.rs
max32630_svd/src/adc/ro_cal0/: mod.rs
max32630_svd/src/adc/ro_cal1/: mod.rs
max32630_svd/src/adc/ro_cal2/: mod.rs
max32630_svd/src/aes/: mod.rs
max32630_svd/src/clkman/: mod.rs
max32630_svd/src/crc/: mod.rs
max32630_svd/src/flc/: mod.rs
max32630_svd/src/flc/slm/: mod.rs
max32630_svd/src/gpio/: mod.rs
max32630_svd/src/i2cm0/: mod.rs
max32630_svd/src/i2cs/: mod.rs
max32630_svd/src/icc/: mod.rs
max32630_svd/src/ioman/: mod.rs
max32630_svd/src/maa/: mod.rs
max32630_svd/src/owm/: mod.rs
max32630_svd/src/pmu0/: mod.rs
max32630_svd/src/pt0/: mod.rs
max32630_svd/src/ptg/: mod.rs
max32630_svd/src/pwrman/: mod.rs
max32630_svd/src/pwrseq/: mod.rs
max32630_svd/src/rtccfg/: mod.rs
max32630_svd/src/rtctmr/: mod.rs
max32630_svd/src/spim0/: mod.rs
max32630_svd/src/spis/: mod.rs
max32630_svd/src/spix/: mod.rs
max32630_svd/src/tmr0/: mod.rs
max32630_svd/src/tpu/: mod.rs
max32630_svd/src/tpu_tsr/: mod.rs
max32630_svd/src/uart0/: mod.rs
max32630_svd/src/usb/: mod.rs
max32630_svd/src/wdt0/: mod.rs
(+346 files in other folders)
